RESOLVED FIXED 266873
REGRESSION (271818@main): textarea with align-content: center is only resizable once
https://bugs.webkit.org/show_bug.cgi?id=266873
Summary REGRESSION (271818@main): textarea with align-content: center is only resizab...
Tim Nguyen (:ntim)
Reported 2023-12-24 21:25:51 PST
STR: - Open data:text/html,<textarea%20style="align-content:%20center">FOO</textarea> - resize once (it works) - resize once more (it fails to resize)
Attachments
Radar WebKit Bug Importer
Comment 1 2023-12-24 21:25:59 PST
Ahmad Saleem
Comment 2 2023-12-25 06:31:10 PST
It seems to be regression since Safari 17.2.1 is working fine while Safari Technology Preview 185 and WebKit ToT are broken.
alan baradlay
Comment 3 2023-12-25 19:00:27 PST
regressed at 271818@main. hittesting must be (mis)finding some content after resize.
EWS
Comment 4 2024-01-12 02:36:00 PST
Committed 272964@main (00e7f006e409): <https://commits.webkit.org/272964@main> Reviewed commits have been landed. Closing PR #22459 and removing active labels.
Tim Nguyen (:ntim)
Comment 5 2024-01-12 12:11:42 PST
*** Bug 238193 has been marked as a duplicate of this bug. ***
Note You need to log in before you can comment on or make changes to this bug.