Make hits on overflow controls target RenderTextControlMultiline itself https://bugs.webkit.org/show_bug.cgi?id=266873 rdar://problem/120108102

Reviewed by Simon Fraser.

When align-content moves the textarea contents, the coordinates of the
inner text block no longer match those of the RenderTextControlMultiline,
so hit tests using the inner block's coordinates don't land on the resizer
properly. This patch captures these cases and associates them with the
textarea, rather than assuming they belong to the inner text block.

Side-effects of this patch include:
- Capturing hits correctly in the presence of borders/padding.
  https://bugs.webkit.org/show_bug.cgi?id=238193 & rdar://90639221
- Using the correct cursor when hovering over the resize controls.
- Not jumping by the border-width when triggering a resize operation.
Test expectations on Linux are thus updated accordingly.

* Source/WebCore/rendering/RenderTextControlMultiLine.cpp:
(WebCore::RenderTextControlMultiLine::nodeAtPoint): Capture hits in overflow controls.
* LayoutTests/fast/css/resize-textarea-align-content-expected.txt: Added.
* LayoutTests/fast/css/resize-textarea-align-content.html: Added.
* LayoutTests/platform/gtk/fast/css/resize-corner-tracking-expected.txt: Use corrected expectations.
* LayoutTests/platform/ios/TestExpectations: Skip new test due to no resize support.
* LayoutTests/platform/wpe/fast/css/resize-corner-tracking-expected.txt: Use corrected expectations.

Canonical link: https://commits.webkit.org/272964@main